Create html files for the recipes listed in homepage and add content to those pages

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
     <img src = "images/coverphoto.jpg" alt = "photo of someone cooking" width = "500" height = "300">
     <h3><a href="recipes/ravioli.html">Ravioli Recipe</a></h3><img src = "images/cover-ravioli.jpg" alt = "photo of ravioli" width = "500" height = "300">
     <h3><a href="recipes/biryani.html">Chicken Biryani Recipe</a></h3><img src = "images/cover-biryani.jpg" alt = "photo of biryani" width = "500" height = "300">
-    <h3><a href="recipes/desserts.html">Cheesecake Recipe</a></h3><img src = "images/cover-cheesecake.jpg" alt = "photo of cheesecake" width = "500" height = "300">
+    <h3><a href="recipes/cheesecake.html">Cheesecake Recipe</a></h3><img src = "images/cover-cheesecake.jpg" alt = "photo of cheesecake" width = "500" height = "300">
 </body>
 </html>
