Add homepage links on the recipe pages

--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -36,5 +36,6 @@
             <li>Cover and cook on low heat (dum) for 15–20 minutes.</li>
             <li>Fluff gently and serve with raita or salad.</li>
         </ol>
+        <a href="../index.html">Back to Home</a>
     </body>
 </html>
