--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -34,5 +34,6 @@
             <li>Bake for 55–60 minutes. Turn off oven, crack door, and let sit for 1 hour.</li>
             <li>Chill for at least 4 hours or overnight before serving.</li>
         </ol>
+        <a href="../index.html">Back to Home</a>
     </body>
 </html>
