Change images and add linked recipe pages as list items in homepage

--- a/index.html
+++ b/index.html
@@ -5,11 +5,18 @@
     <meta name="viewport" content="width=\, initial-scale=1.0">
     <title>TOP Recipes</title>
 </head>
-<body bgcolor="#ecefe8" leftmargin="30%" topmargin="2%">
+<body bgcolor="#ecefe8">
     <h1>Odin Recipes</h1>
-    <img src = "images/coverphoto.jpg" alt = "photo of someone cooking" width = "500" height = "300">
-    <h3><a href="recipes/ravioli.html">Ravioli Recipe</a></h3><img src = "images/cover-ravioli.jpg" alt = "photo of ravioli" width = "500" height = "300">
-    <h3><a href="recipes/biryani.html">Chicken Biryani Recipe</a></h3><img src = "images/cover-biryani.jpg" alt = "photo of biryani" width = "500" height = "300">
-    <h3><a href="recipes/cheesecake.html">Cheesecake Recipe</a></h3><img src = "images/cover-cheesecake.jpg" alt = "photo of cheesecake" width = "500" height = "300">
+    <img src="images/coverphoto.jpg" alt="photo of food" height = "35%" width = "40%">
+    <h2>Welcome to the Recipe Collection!</h2>
+    <p>Here are some of the best recipes you can try at home. Click on the links to view the full recipes.</p>
+    <ul>
+        <li><a href="recipes/ravioli.html">🥟 Ravioli Recipe</a></li>
+
+        <li><a href="recipes/biryani.html">🍛 Chicken Biryani Recipe</a></li>
+
+        <li><a href="recipes/cheesecake.html">🍰 Cheesecake Recipe</a></li>
+
+    </ul>
 </body>
 </html>
