--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -6,7 +6,7 @@
         <title>Recipe | Chicken Biryani</title>
     </head>
     <body bgcolor="#ecefe8" leftmargin="30%" topmargin="2%">
-        <h1>🍛 Chicken Biryani Recipe</h1><img src="../images/biryani.jpg" alt="photo of chicken biryani" width="500" height="300">
+        <h1>🍛 Chicken Biryani Recipe</h1><img src="../images/cover-biryani.jpg" alt="photo of chicken biryani" width="500" height="300">
         <h2>Description:</h2>
         <p>A flavorful South Asian rice dish made with fragrant spices, marinated chicken, and basmati rice—layered and slow-cooked to perfection.</p>
         
@@ -26,7 +26,7 @@
             <li>Salt to taste</li>
         </ul>
 
-        <h2>Instructions:</h2>
+        <h2>Steps:</h2>
         <ol>
             <li>Marinate chicken in yogurt, turmeric, chili powder, salt, and half the garam masala for 1 hour.</li>
             <li>Fry onions until golden. Remove half for garnishing.</li>
