--- a/recipes/ravioli.html
+++ b/recipes/ravioli.html
@@ -6,7 +6,7 @@
         <title>Recipe | Ravioli</title>
     </head>
     <body bgcolor="#ecefe8" leftmargin="30%" topmargin="2%">
-        <h1>🥟 Ravioli Recipe</h1><img src = "../images/ravioli.jpg" alt = "photo of ravioli" width = "500" height = "300">
+        <h1>🥟 Ravioli Recipe</h1><img src = "../images/cover-ravioli.jpg" alt = "photo of ravioli" width = "500" height = "300">
         <h2>Description:</h2>
         <p>Classic Italian pasta pillows filled with ricotta and spinach, served with a light tomato sauce. 
         Perfect for a hearty and elegant meal.</p>
@@ -23,7 +23,7 @@
             <li>2 cups tomato sauce</li>
         </ul>
 
-        <h2>Instructions:</h2>
+        <h2>Steps:</h2>
         <ol>
             <li>In a bowl, mix flour, eggs, and olive oil into a dough.</li>
             <li>Knead the dough for 10 minutes, then let it rest for 30 minutes.</li>
