--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -6,7 +6,7 @@
         <title>Recipe | Cheesecake</title>
     </head>
     <body bgcolor="#ecefe8" leftmargin="30%" topmargin="2%">
-    <h1>🍰 Cheesecake Recipe</h1><img src="../images/cheesecake.jpg" alt="photo of cheesecake" width="500" height="300">
+    <h1>🍰 Cheesecake Recipe</h1><img src="../images/cover-cheesecake.jpg" alt="photo of cheesecake" width="500" height="300">
         <h2>Description:</h2>
         <p>A rich and creamy baked cheesecake with a buttery graham cracker crust, perfect for any dessert lover.</p>
         
@@ -25,7 +25,7 @@
             <li>1/2 cup sour cream</li>
         </ul>
 
-        <h2>Instructions:</h2>
+        <h2>Steps:</h2>
         <ol>
             <li>Preheat oven to 325°F (160°C).</li>
             <li>Mix crust ingredients and press into a 9-inch springform pan. Bake for 10 minutes.</li>
