Change height and width in recipe pages

--- a/recipes/cheesecake.html
+++ b/recipes/cheesecake.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Recipe | Cheesecake</title>
     </head>
-    <body bgcolor="#ecefe8" leftmargin="30%" topmargin="2%">
+    <body bgcolor="#ecefe8">
     <h1>🍰 Cheesecake Recipe</h1><img src="../images/cover-cheesecake.jpg" alt="photo of cheesecake" width="500" height="300">
         <h2>Description:</h2>
         <p>A rich and creamy baked cheesecake with a buttery graham cracker crust, perfect for any dessert lover.</p>
