--- a/recipes/ravioli.html
+++ b/recipes/ravioli.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Recipe | Ravioli</title>
     </head>
-    <body bgcolor="#ecefe8" leftmargin="30%" topmargin="2%">
+    <body bgcolor="#ecefe8">
         <h1>🥟 Ravioli Recipe</h1><img src = "../images/cover-ravioli.jpg" alt = "photo of ravioli" width = "500" height = "300">
         <h2>Description:</h2>
         <p>Classic Italian pasta pillows filled with ricotta and spinach, served with a light tomato sauce. 
