--- a/recipes/biryani.html
+++ b/recipes/biryani.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Recipe | Chicken Biryani</title>
     </head>
-    <body bgcolor="#ecefe8" leftmargin="30%" topmargin="2%">
+    <body bgcolor="#ecefe8">
         <h1>🍛 Chicken Biryani Recipe</h1><img src="../images/cover-biryani.jpg" alt="photo of chicken biryani" width="500" height="300">
         <h2>Description:</h2>
         <p>A flavorful South Asian rice dish made with fragrant spices, marinated chicken, and basmati rice—layered and slow-cooked to perfection.</p>
